backend/deployment/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: auth
  name: auth
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: auth
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/backend-default: "true"
        io.kompose.service: auth
    spec:
      containers:
        - env:
            - name: ADMIN_FRONTEND_DOMAIN
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_FRONTEND_DOMAIN
                  name: auth-env
            - name: APP_DOMAIN
              valueFrom:
                configMapKeyRef:
                  key: APP_DOMAIN
                  name: auth-env
            - name: FRONTEND_DOMAIN
              valueFrom:
                configMapKeyRef:
                  key: FRONTEND_DOMAIN
                  name: auth-env
            - name: JWT_EXPIRE
              valueFrom:
                configMapKeyRef:
                  key: JWT_EXPIRE
                  name: auth-env
            - name: JWT_REFRESH_EXPIRE
              valueFrom:
                configMapKeyRef:
                  key: JWT_REFRESH_EXPIRE
                  name: auth-env
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: auth-env
            - name: MAIL_HOST
              valueFrom:
                configMapKeyRef:
                  key: MAIL_HOST
                  name: auth-env
            - name: MAIL_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: MAIL_PASSWORD
                  name: auth-env
            - name: MAIL_USER
              valueFrom:
                configMapKeyRef:
                  key: MAIL_USER
                  name: auth-env
            - name: MONGO_URI
              valueFrom:
                configMapKeyRef:
                  key: MONGO_URI
                  name: auth-env
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: auth-env
            - name: RABBITMQ_URL
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_URL
                  name: auth-env
          image: gihaa/ds-project-auth
          name: auth-service
          ports:
            - containerPort: 3001
              hostPort: 3001
              protocol: TCP
      restartPolicy: Always
