backend/deployment/course-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: course
  name: course
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: course
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f docker-compose.yml
        kompose.version: 1.33.0 (HEAD)
      labels:
        io.kompose.network/backend-default: "true"
        io.kompose.service: course
    spec:
      containers:
        - env:
            - name: JWT_EXPIRE
              valueFrom:
                configMapKeyRef:
                  key: JWT_EXPIRE
                  name: course-env
            - name: JWT_REFRESH_EXPIRE
              valueFrom:
                configMapKeyRef:
                  key: JWT_REFRESH_EXPIRE
                  name: course-env
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: course-env
            - name: MONGO_URI
              valueFrom:
                configMapKeyRef:
                  key: MONGO_URI
                  name: course-env
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: course-env
            - name: RABBITMQ_URL
              valueFrom:
                configMapKeyRef:
                  key: RABBITMQ_URL
                  name: course-env
          image: course
          name: course-service
          ports:
            - containerPort: 3002
              hostPort: 3002
              protocol: TCP
      restartPolicy: Always
