backend/deployment/notification-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: notification
  name: notification
spec:
  ports:
    - name: "3005"
      port: 3005
      targetPort: 3005
  selector:
    io.kompose.service: notification
