backend/deployment/payment-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.33.0 (HEAD)
  labels:
    io.kompose.service: payment
  name: payment
spec:
  ports:
    - name: "3004"
      port: 3004
      targetPort: 3004
  selector:
    io.kompose.service: payment
