backend/deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  annotations:
    nginx.org/rewrites: "serviceName=tea-svc rewrite=/;serviceName=coffee-svc rewrite=/beans/"
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth
            port:
              number: 3001
      - path: /course
        pathType: Prefix
        backend:
          service:
            name: course
            port:
              number: 3002
      - path: /enrollment
        pathType: Prefix
        backend:
          service:
            name: enrollment
            port:
              number: 3003
      - path: /payment
        pathType: Prefix
        backend:
          service:
            name: payment
            port:
              number: 3004


# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/cloud/deploy.yaml
# minikube tunnel
# kubectl get services -n ingress-nginx
